...
      PopupMenuItem(
        value: ProductParameterManagementListAction.view,
        child: Text('查看参数'),
      ),
      PopupMenuItem(
        value: ProductParameterManagementListAction.history,
        child: Text('查看历史'),
      ),
      PopupMenuItem(
        value: ProductParameterManagementListAction.edit,
        child: Text('编辑参数'),
      ),
      if (widget.canExportParameters)
        const PopupMenuItem(
          value: ProductParameterManagementListAction.export,
          child: Text('导出参数'),
        ),
...
