...
                                ),
                                const SizedBox(height: 12),
                                TextField(
                                  controller: _testValueController,
                                  maxLines: 3,
                                  decoration: const InputDecoration(
                                    labelText: '首件测试值',
                                    border: OutlineInputBorder(),
                                    alignLabelWithHint: true,
                                  ),
                                ),
                              ],
                            ),
...
